# source-collector-admin

./: README.md  pyproject.toml
src/: app.py  constants.py  session_manager.py
src/api/notifications/: preview.py
src/layouts/: login.py  main.py
